Update on Overleaf.

--- a/SEP_Report_hnguy31.tex
+++ b/SEP_Report_hnguy31.tex
@@ -324,14 +324,14 @@ The abstract goes here. today is the my first try hdfh  with {latex}
 
 \section{Introduction}
 % no \PARstart
-Wireless Sensor Network (WSN) is built from multi-functional sensor nodes, which communicating together in short distances. Sensor node has tiny size with low-power, low cost design which enables features: sensing data, processing data, and networking.\cite{Akyildiz2002}
+Wireless Sensor Network (WSN) is built from multi-functional sensor nodes, which communicating together in short distances via wireless network. Sensor node has tiny size with low-power, low cost design which enables features: sensing data, processing data, and networking. Sensors are usually distributed in a physical area, \textit{sensor field}. Data, which is sensed and processed by nodes, is sent to center processing node, \textit{the sink} . Network communication architecture is infrastructure-less, based on wireless transceiver. Beside computational capacities and memory limitation, wireless sensor nodes, as microelectronic devices, are equipped with restrict power source, which defines node lifetime. With infrastructure-less networks, several nodes also play as \textit{router} of data, or \textit{cluster head} of physical area. The malfunction or powerless nodes might require changes of topology  or network re-organized. Hence power conservation was already took an important area of WSN\cite{Akyildiz2002}.
 
-Sensors are usually distributed in a physical area, \textit{sensor field}. Data, which is sensed and processed by nodes, is sent to center processing node. Network communication architecture is infrastructure-less, based on wireless transceiver. Data, which is sensed and processed by nodes, is sent to center processing node, \textit{the sink}\cite{Akyildiz2002}.
+Direct transmission  \cite{Shepard}
+u
 
-Sensor nodes are limited in power, computational capacities, and memory.\cite{Akyildiz2002}
 
 
-. Node sense an report data. Processing center is "sink", Energy aware. Due te replace embedded batteries. Direct transmission. LEACH solution, energy load.
+ Direct transmission. LEACH solution, energy load. 
 Cluster head. 
 homogeneous - all node has same amount energy 
 heterogeneous - percentage of node has more capacity of energy than others.
@@ -340,7 +340,7 @@ benefit.
  
 
 
- May all your publication endeavors be successful.
+ 
 
 %\hfill mds 
 %\hfill November 18, 2002
