--- a/anet_method.bib
+++ b/anet_method.bib
@@ -1,3 +1,34 @@
+@article{Shepard,
+abstract = {Prior work in the field of packet radio networks has often assumed a simple success-if-exclusive model of successful reception. This simple model is insufficient to model interference in large dense packet radio networks accurately. In this paper we present a model that more closely approximates communication theory and the underlying physics of radio communication. Using this model we present a decentralized channel access scheme for scalable packet radio networks that is free of packet loss due to collisions and that at each hop requires no per-packet transmissions other than the single transmission used to convey the packet to the next-hop station. We also show that with a modest fraction of the radio spectrum, pessimistic assumptions about propagation resulting in maximum-possible self-interference, and an optimistic view of future signal processing capabilities that a self-organizing packet radio network may scale to millions of stations within a metro area with raw per-station rates in the hundreds of megabits per second.},
+author = {Shepard, Timothy J},
+doi = {10.1145/248156.248176},
+file = {:home/hnguy31/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Shepard - Unknown - A Channel Access Scheme for Large Dense Packet Radio Networks.pdf:pdf},
+isbn = {0897917901},
+issn = {01464833},
+journal = {ACM SIGCOMM Computer Communication Review},
+number = {4},
+pages = {219--230},
+title = {{A channel access scheme for large dense packet radio networks}},
+url = {http://portal.acm.org/citation.cfm?doid=248157.248176},
+volume = {26},
+year = {1996}
+}
+@article{Bandyopadhyay,
+abstract = {A wireless network consisting of a large number of small sensors with low-power transceivers can be an effective tool for gathering data in a variety of environments. The data collected by each sensor is communicated through the network to a single processing center that uses all reported data to determine characteristics of the environment or detect an event. The communication or message passing process must be designed to conserve the limited energy resources of the sensors. Clustering sensors into groups, so that sensors communicate information only to clusterheads and then the clusterheads communicate the aggregated information to the processing center, may save energy. In this paper, we propose a distributed, randomized clustering algorithm to organize the sensors in a wireless sensor network into clusters. We then extend this algorithm to generate a hierarchy of clusterheads and observe that the energy savings increase with the number of levels in the hierarchy. Results in stochastic geometry are used to derive solutions for the values of parameters of our algorithm that minimize the total energy spent in the network when all sensors report data through the clusterheads to the processing center.},
+author = {Bandyopadhyay, Seema and Coyle, E.J.},
+doi = {10.1109/INFCOM.2003.1209194},
+file = {:home/hnguy31/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bandyopadhyay, Coyle - Unknown - An Energy Efficient Hierarchical Clustering Algorithm for Wireless Sensor Networks.pdf:pdf},
+isbn = {0743-166X},
+issn = {0743-166X},
+journal = {Infocom '03. 22nd Annual Joint Conference of the IEEE Computer and Communications.},
+keywords = {- sensor networks,algorithms,clustering methods,communicate directly only with,other sensors that are,sensors not,small distance,tessellations,to enable communication between,voronoi,within a},
+number = {C},
+pages = {1713--1723},
+title = {{An energy efficient hierarchical clustering algorithm for wireless sensor networks}},
+url = {http://infocom2003.ieee-infocom.org/papers/42{\_}02.PDF http://ieeexplore.ieee.org/xpls/abs{\_}all.jsp?arnumber=1209194},
+volume = {3},
+year = {2003}
+}
 @article{Heinzelman2002,
 abstract = {Networking together hundreds or thousands of cheap microsensor nodes allows users to accurately monitor a remote environment by intelligently combining the data from the individual nodes. These networks require robust wireless communication protocols that are energy efficient and provide low latency. We develop and analyze low-energy adaptive clustering hierarchy (LEACH), a protocol architecture for microsensor networks that combines the ideas of energy-efficient cluster-based routing and media access together with application-specific data aggregation to achieve good performance in terms of system lifetime, latency, and application-perceived quality. LEACH includes a new, distributed cluster formation technique that enables self-organization of large numbers of nodes, algorithms for adapting clusters and rotating cluster head positions to evenly distribute the energy load among all the nodes, and techniques to enable distributed signal processing to save communication resources. Our results show that LEACH can improve system lifetime by an order of magnitude compared with general-purpose multihop approaches.},
 author = {Heinzelman, Wendi B and Chandrakasan, Anantha P and Balakrishnan, Hari},
